Add edit and delete task endpoints

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sequelize-course",
+  "name": "internal-task-management-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
