--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"build":"babel ./src --out-dir ./dist",
-	"start":"node dist/server.js",
-	"debug":"npm run dev -- --inspect",
-	"dev":"NODE_ENV=development nodemon --exec babel-node src/server.js",
+    "build": "babel ./src --out-dir ./dist",
+    "start": "node dist/server.js",
+    "debug": "npm run dev -- --inspect",
+    "dev": "NODE_ENV=development nodemon --exec babel-node src/server.js",
     "test": "jest --runInBand",
-	"test:watch":"npm test -- --watch",
-	"test:coverage":"npm test -- --coverage"
+    "test:watch": "npm test -- --watch",
+    "test:coverage": "npm test -- --coverage"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "@types/jest": "^27.4.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1",
     "supertest": "^6.2.2"
   },
   "dependencies": {
@@ -33,7 +34,6 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
-    "sequelize": "^6.16.2",
-    "sequelize-cli": "^6.4.1"
+    "sequelize": "^6.16.2"
   }
 }
